536: Set.copyOf() is idempotent for unmodifiable sets.